Bug 163752 - After cancellation of dragging cells the black border around the drop target stays visible
Summary: After cancellation of dragging cells the black border around the drop target ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.2.7.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: moormaster
URL:
Whiteboard: target:25.8.0 target:25.2.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-03 15:25 UTC by moormaster
Modified: 2024-12-15 12:03 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description moormaster 2024-11-03 15:25:58 UTC
Description:
When I drag cells around but want to cancel the drag & drop operation the black border around the target cells stays visible.

Steps to Reproduce:
1. Select a range of cells, i.e. B2:D4
2. Drag the selection anywhere (i.e. to F6:H8) and keep holding the left mouse button
3. Press ESC to cancel drag & drop operation

Actual Results:
Drag & Drop was cancelled but a black border around the last drop target is still visible.

Expected Results:
Drag & Drop gets cancelled and visualization of the drop target disappears.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.2.7.2 (X86_64) / LibreOffice Community
Build ID: 420(Build:2)
CPU threads: 24; OS: Linux 6.11; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
24.2.7-1
Calc: threaded
Comment 1 moormaster 2024-11-03 15:28:15 UTC
I will work on this.
Comment 2 Commit Notification 2024-12-05 05:52:15 UTC
Andre Herbst committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/112736d1ea5234a66c669e2b2999229f33f05c71

tdf#163752 fix: hide drag target border on cancellation of d&d operation

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-12-05 20:34:31 UTC
Andre Herbst committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/ea2175942e497421775f3a1629920519cfb9d6ad

tdf#163752 fix: hide drag target border on cancellation of d&d operation

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 BogdanB 2024-12-15 11:14:57 UTC
Andre, is this bug solved?
Comment 5 moormaster 2024-12-15 11:58:05 UTC
I couldn't test it with 25.2.0 since the daily builds for this version are missing  downloads for linux:

https://dev-builds.libreoffice.org/daily/libreoffice-25-2/

I downloaded the daily master build from

https://dev-builds.libreoffice.org/daily/master/current.html

In the master build the bug is fixed for me.
Comment 6 BogdanB 2024-12-15 12:03:09 UTC
Fixed, because we have a commit for this bug.
Comment 7 BogdanB 2024-12-15 12:03:39 UTC
Verified, based on comment 5.