tdf#163752 fix: hide drag target border on cancellation of d&d operation

Not relying on rData.pCellTransfer anymore since it is always null
when rEvt.mbLeaving is true.

Change-Id: I4755e8f9b62efacd2eb4d515e1993578beadef09
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/175970
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
(cherry picked from commit 112736d1ea5234a66c669e2b2999229f33f05c71)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177864
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>